--- a/src/scss/eventide-rp-system.scss
+++ b/src/scss/eventide-rp-system.scss
@@ -15,6 +15,7 @@
 
 /* Styles limited to eventide-rp-system sheets */
 @use 'components/chat-cards';
+@use 'components/damage-cards';
 @use 'components/gear-creator';
 @use 'components/sound-settings';
 
