--- a/templates/chat/gear-message.hbs
+++ b/templates/chat/gear-message.hbs
@@ -1,5 +1,5 @@
 <div class="chat-card">
-<div class="chat-card__header chat-card__header--status chat-card__header--image" style="{{style}}">
+<div class="chat-card__header chat-card__header--gear chat-card__header--image" style="{{style}}">
   <img src="{{item.img}}" class="chat-card__image--primary" />
   <div>{{item.name}}</div>
 </div>
