--- a/templates/actor/gear.hbs
+++ b/templates/actor/gear.hbs
@@ -159,7 +159,7 @@
       <tbody class='erps-data-table__body'>
         {{#each unequippedGear as |item id|}}
           <tr
-            class='erps-data-table__row erps-data-table__row--unequipped{{#if (not item.system.quantity)}} erps-data-table__row--disabled{{/if}}'
+            class='erps-data-table__row erps-data-table__row--unequipped'
             data-item-id='{{item._id}}'
             data-drag='true'
             data-document-class='Item'
